# ai_incubation_platform

./: .gitignore  build.gradle.kts  readme.md
ai_incubation_platform/Her/deerflow-integration/: pyproject.toml
ai_incubation_platform/Her/deerflow-integration/deerflow_integration/: __init__.py
ai_incubation_platform/platform-portal/: AI_NATIVE_COMPLETION_REPORT.md  AI_NATIVE_REDESIGN_WHITEPAPER.md  README.md  pyproject.toml  requirements.txt  test_ai_native.py
ai_incubation_platform/platform-portal/platform_portal/: __init__.py  __main__.py  app.py
ai_incubation_platform/platform-portal/platform_portal/static/: AI-VENTURES-DETAILED-EXPLANATION.html  AI-VENTURES-PROJECTS-INTRODUCTION.html  AI-VENTURES-SIMPLE-EXPLANATION.html  PLATFORM_AGENT_STANDARD.html  ai-code-understanding.html  ai-community-buying.html  ai-employee-platform.html  ai-hires-human.html  ai-opportunity-miner.html  ai-runtime-optimizer.html  ai-traffic-booster.html  data-agent-connector.html  human-ai-community.html  index.html  matchmaker-agent.html  org-collab-ai.html
ai_incubation_platform/platform-portal/src/: main.py
ai_incubation_platform/platform-portal/src/agents/: __init__.py  portal_agent.py
ai_incubation_platform/platform-portal/src/api/: __init__.py  chat.py  tools.py  workflows.py
ai_incubation_platform/platform-portal/src/config/: settings.py
ai_incubation_platform/platform-portal/src/tools/: __init__.py  intent_tools.py  registry.py  routing_tools.py
ai_incubation_platform/platform-portal/src/workflows/: __init__.py  cross_project_workflows.py  routing_workflows.py
(+3128 files in other folders)
