[project]
name = "deerflow-integration"
version = "0.1.0"
description = "Her 项目 DeerFlow 桥接包 - 提供统一的 Agent 运行时访问"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deerflow_integration"]